--- a/postgres-wire-proxy/Cargo.toml
+++ b/postgres-wire-proxy/Cargo.toml
@@ -14,3 +14,5 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tracing-appender = "0.2"
 bytes = "1.9"
 anyhow = "1.0"
+owo-colors = "4.1"
+time = { version = "0.3", features = ["formatting"] }
